--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <aside class="d-none d-lg-block col-lg-3 sidebar">
                 <h3>Categories</h3>
                 <ul class="p-2 sidebar__category-list">
-                    <li class="p-1 text-capitalize"><a href="#">Show All</a></li>
+                    <li class="p-1 text-capitalize"><a href="index.html">Show All</a></li>
                 </ul>
             </aside>
 
