added abstract class, sorting is functional, refactoring code

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
             <form action="#" class="d-none d-lg-block">
                 <label for="#">Sort: &nbsp;</label>
                 <select id="select-sorting">
-                    <option value="test" disabled selected>Choose</option>
-                    <option value="price">Price ASC</option>
-                    <option value="price">Price DESC</option>
+                    <option value="null" disabled selected>Choose</option>
+                    <option value="priceAsc">Price ASC</option>
+                    <option value="priceDesc">Price DESC</option>
                     <option value="rating">Rating</option>
 
                 </select>
