Links from category submenu are functional / refactoring code

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                 <li class="position-relative navigation__items__has-child">
                     <a href="#">Categories</a>
                     <ul class="d-flex flex-column position-absolute top-100 navigation__items__has-child__child-menu">
-                        <li><a href="#">PhonesAndTablets</a></li>
-                        <li><a href="#">Phones with length</a></li>
-                        <li><a href="#">Phones</a></li>
-                        <li><a href="#">Phones</a></li>
+                        <li><a href="#">Smartphones</a></li>
+                        <li><a href="#">Laptops</a></li>
+                        <li><a href="#">Mens-Watches</a></li>
+                        <li><a href="#">Sunglasses</a></li>
                     </ul>
                 </li>
                 <li><a href="#">About us</a></li>
@@ -52,7 +52,7 @@
             <aside class="d-none d-lg-block col-lg-3 sidebar">
                 <h3>Categories</h3>
                 <ul class="p-2 sidebar__category-list">
-                    <li class="p-1 text-capitalize"><a href="index.html">Show All</a></li>
+                    <li class="p-1 text-capitalize"><a href="index.html" id="show-all-products">Show All</a></li>
                 </ul>
             </aside>
 
